# game_pong

./: BewertungInformatikKryptographieoderSpiel.html  generateRequirements.bat  main BACKUP.py  main.py  player.py  pyproject.toml  readme.md  requirements.txt  settings.json  settingsmaker.py  utils.py  wsDebug.py  wsHandler.py
